<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/song_info_editing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".presentation.fragments.EditSongInfoFragment">

...

        <TextView
            android:id="@+id/edit_song_info_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Song Name"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_song_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="TextView"
            android:textSize="18sp" />

...
            android:text="Artist"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_song_info_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="TextView"
            android:textSize="18sp" />

...
            android:text="Album"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_song_info_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="TextView"
            android:textSize="18sp" />

...
            android:text="Genre"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_song_info_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="TextView"
            android:textSize="18sp" />

        <Button
            android:id="@+id/song_info_editDone_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="120dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_corner_button"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:text="Done"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>
</ScrollView>
