...
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="50dp" />

            <TextView
                android:id="@+id/song_info_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="Song Name"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="TextView"
                android:textSize="18sp" />
...
                android:text="Artist"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_info_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="TextView"
                android:textSize="18sp" />
...
                android:text="Album"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_info_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="TextView"
                android:textSize="18sp" />
...
                android:text="Genre"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/song_info_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="TextView"
                android:textSize="18sp" />
...
                android:stepSize="0.5"/>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/song_info_edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/ic_edit"
        app:backgroundTint="@color/colorAccent" />
...
