...
        android:singleLine="true"
        android:text="TextView2"
        android:textColor="@android:color/black"
        android:textSize="16dp" />

    <ImageButton
        android:id="@+id/popup_button"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_gravity="right"
        android:adjustViewBounds="true"
        android:background="?android:selectableItemBackground"
...
